--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,14 @@ services:
     env_file:
       - .env
     command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+
+  streamlit:
+    build: .
+    container_name: pdf-chat-ui
+    ports:
+      - "8501:8501"
+    volumes:
+      - ./app:/app/app
+    env_file:
+      - .env
+    command: ["streamlit", "run", "app/streamlit_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
